<resources>
    <string name="app_name">TestingOptions</string>
    <string name="math_problem">MathProblem</string>
    <string name="puzzle">Puzzle</string>
    <string name="music">Music</string>
    <string name="reaction_game">ReactionGame</string>
    <string name="password">Password</string>
    <string name="vibration">vibration</string>
    <string name="brightness">Brightness</string>
</resources>
