<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="296dp"
        android:layout_height="303dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <RadioButton
            android:id="@+id/MathProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math_problem" />

        <RadioButton
            android:id="@+id/Puzzle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/puzzle" />

        <RadioButton
            android:id="@+id/Music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music" />

        <RadioButton
            android:id="@+id/ReactionGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction_game" />

        <RadioButton
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <RadioButton
            android:id="@+id/vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibration" />

        <RadioButton
            android:id="@+id/Brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness" />

    </RadioGroup>

    <Button
        android:id="@+id/chooseBtn"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="53dp"
        android:text="Choose"
        app:layout_constraintBottom_toTopOf="@+id/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="choice"/>

</androidx.constraintlayout.widget.ConstraintLayout>